# kiln

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
forge/: __init__.py  app.py  main.py
forge/configs/react/vite/: config.json  config.jsonc
forge/engine/: __init__.py  asset_loader.py  config_loader.py  git_handler.py  plugin_loader.py  scaffolder.py  script_runner.py  structure.py  template_vars.py  templates_loader.py
forge/engine/constructors/: __init__.py  android.py  base.py  dotnet.py  nodejs.py
forge/plugins/dotnet/efcore/: DatabaseExtensions.cs  plugin.json
forge/plugins/dotnet/enum-extensions/: EnumExtensions.cs  plugin.json
forge/plugins/dotnet/jwt/: AuthExtensions.cs  ITokenGenerator.cs  JwtOptions.cs  JwtTokenGenerator.cs  plugin.json
forge/plugins/nodejs/prisma/: plugin.json  setup_prisma.py
forge/plugins/nodejs/prisma-test/: plugin.json  setup_prisma.py
forge/screens/: __init__.py  preview_screen.py  run_screen.py  select_screen.py
forge/templates/kotlin_app-module/: AppModule.kt  template.json
forge/templates/kotlin_ui_core/: template.json
forge/templates/kotlin_ui_core/theme/: Color.kt  Theme.kt  Type.kt
forge/templates/react_structure/: template.json
forge/templates/react_structure/contexts/: AppContext.tsx
forge/templates/react_structure/hooks/: useExample.ts
forge/templates/react_structure/lib/: utils.ts
forge/templates/react_structure/types/: index.ts
tests/: test_asset_loader.py  test_config_loader.py  test_constructors.py  test_plugins_and_templates.py  test_scaffolder.py
(+28 files in other folders)
