[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiln-cli"
version = "0.1.0"
description = "Interactive TUI project scaffolding tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kiln contributors" }]
keywords = ["cli", "scaffold", "tui", "textual", "project-init"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "textual>=0.59.0",
    "typer>=0.12.0",
    "commentjson>=0.9.0",
    "gitpython>=3.1.40",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "textual-dev>=0.59.0",
]

[project.scripts]
kiln = "forge.main:app"
mkp  = "forge.main:app"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]